<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="FORMULARIO"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txt_ruc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ruc"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txt_nombrecomercial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre_comercial"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txt_representantelegal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/representante_legal"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txt_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/direccion"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txt_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="phone" />

        <EditText
            android:id="@+id/txt_productos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/productos"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txt_credito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/credito"
            android:inputType="numberDecimal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="292dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_imagen"
                android:layout_width="wrap_content"
                android:layout_height="231dp"
                android:layout_weight="1"
                android:src="@drawable/imagen" />

            <Button
                android:id="@+id/btn_SeleccionarImagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Seleccionar Imagen" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_agregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/crear" />

            <Button
                android:id="@+id/btn_editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/editar" />

            <Button
                android:id="@+id/btn_eliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eliminar" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TutoCrud" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>